Eliminar contacto de WhatsApp del sitio web

--- a/Coaching/index.html
+++ b/Coaching/index.html
@@ -71,10 +71,7 @@
 
   <section class="contacto" id="contacto">
     <h3>Contacto</h3>
-    <p>¿Querés impulsar tu organización? Escribinos por WhatsApp o completá el formulario:</p>
-    <a class="whatsapp-btn" href="https://wa.me/5493416143289" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"> 341-6143289
-    </a>
+    <p>¿Querés impulsar tu organización? Completá el formulario:</p>
     <div class="formulario">
       <form>
         <input type="text" placeholder="Nombre" required>
