--- a/Coaching/index.html
+++ b/Coaching/index.html
@@ -77,7 +77,7 @@
         <input type="text" placeholder="Nombre" required>
         <input type="email" placeholder="Email" required>
         <textarea rows="4" placeholder="Mensaje" required></textarea>
-        <button type="submit" disabled>Enviar (solo visual)</button>
+        <button type="submit" disabled>Enviar </button>
       </form>
     </div>
   </section>
@@ -88,7 +88,7 @@
       <span><b>ECID</b> AMR</span>
     </div>
     Liderazgo y Coaching Profesional<br>
-    <span style="font-size:0.95em; color:#b0c4de;">© 2024 ECID AMR. Todos los derechos reservados.</span>
+    <span style="font-size:0.95em; color:#b0c4de;">© 2025 ECID AMR. Todos los derechos reservados.</span>
   </footer>
 
   <script>
